homelab/k8s/jellyfin-forward/endpointslice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: jellyfin
  labels:
    kubernetes.io/service-name: jellyfin
addressType: IPv4
ports:
  - name: app
    protocol: TCP
    port: 8096
endpoints:
  - addresses:
      - "192.168.16.5"
    conditions:
      ready: true
