homelab/k8s/jellyfin-forward/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  ports:
    - port: 8096
      name: app
      protocol: TCP
      targetPort: app
  clusterIP: None
  type: ClusterIP
